--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
-    <div><img src="github_img.png" alt="Hello World from Space" style="width:100%;max-width:960px"></div>
+    <div>
+        <img src="github_img.png" alt="Hello World from Space">
+        <br>
+        <img src="fox_img.png">
+    </div>
     <h1>Hello world!</h1>
     <p>This is the first file in my new Git Repo.</p>
     <p>A new line in our file!</p>
