--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 <body>
     <div>
         <img src="github_img.png" alt="Hello World from Space">
-        <br>
-        <img src="fox_img.png">
     </div>
     <h1>Hello world!</h1>
     <p>This is the first file in my new Git Repo.</p>
     <p>A new line in our file!</p>
     <p>This line is here to show how merging works.</p>
+    <div><img src="fox_img.png"></div>
 </body>
 
 </html>
